# os-homework

./: CMakeLists.txt  main.c
fifth/: proc_thread_graph.c
first/: copy_c_files.sh  finder.sh  generate_files.sh  remove_a_files.sh  rename_b_files.sh
first/test/: result.txt  test.txt
fourth/: matrix_process.c
second/: cp.c
seventh/tcp/: client_tcp.c  server_tcp.c
seventh/udp/: client_udp.c  server_udp.c
sixth/: matrix.c
third/: proc_graph.c
